--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "lancedb>=0.25.2",
+    "marker-pdf>=1.10.1",
     "typer>=0.20.0",
 ]
 
