--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "datauri>=1.0.0",
+    "jupyter>=1.1.1",
     "lancedb>=0.25.2",
+    "loguru>=0.7.3",
     "marker-pdf>=1.10.1",
+    "mistralai>=1.9.11",
+    "polars>=1.34.0",
+    "python-dotenv>=1.1.1",
+    "tqdm>=4.67.1",
     "typer>=0.20.0",
 ]
 
