--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "datauri>=1.0.0",
     "jupyter>=1.1.1",
     "lancedb>=0.25.2",
+    "litellm>=1.79.0",
     "loguru>=0.7.3",
     "marker-pdf>=1.10.1",
     "mistralai>=1.9.11",
