Enhance configuration and embedding functionality with new categories and dry run option

--- a/config.toml
+++ b/config.toml
@@ -8,4 +8,4 @@ model = "gemini-embedding-001"
 dim = "1536"
 
 [paper]
-categories = ["cs.AI", "cs.LG", "stat.ML"]
+categories = ["cs.CL", "cs.CV", "cs.AI", "cs.LG", "stat.ML", "cs.IR", "cs.CY"]
