--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,46 @@
+# 数据库配置
+# 本地存储：使用本地路径
+# CloudFlare R2：使用 s3://bucket-name/path 格式
+# 注意：使用 R2 时需要在 .env 中配置相应的环境变量
 [database]
-name = "papersys"
-
-
+# uri = "data/papersys"
+uri = "s3://papersys/lancedb"
 
 [embedding]
 model = "gemini-embedding-001"
-dim = "1536"
+dim = 1536
 
 [paper]
 categories = ["cs.CL", "cs.CV", "cs.AI", "cs.LG", "stat.ML", "cs.IR", "cs.CY"]
+
+[recommend]
+# 负样本采样比例
+neg_sample_ratio = 5.0
+# 随机种子
+seed = 42
+
+# 逻辑回归参数
+[recommend.logistic_regression]
+C = 1.0
+max_iter = 1000
+
+# 置信度加权采样
+[recommend.confidence_weighted_sampling]
+enable = false
+high_conf_threshold = 0.9
+high_conf_weight = 2.0
+
+# 自适应难度采样
+[recommend.adaptive_difficulty_sampling]
+enable = false
+n_neighbors = 5
+pos_sampling_ratio = 2.0
+synthetic_ratio = 0.5
+k_smote = 16
+
+# 预测配置
+[recommend.predict]
+last_n_days = 7
+sample_rate = 0.15
+high_threshold = 0.95
+boundary_threshold = 0.5
