--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,13 @@ dependencies = [
     "loguru>=0.7.3",
     "marker-pdf>=1.10.1",
     "mistralai>=1.9.11",
+    "markdown-it-py[linkify,plugins]>=3.0.0",
+    "mdit-py-plugins>=0.4.0",
     "polars>=1.34.0",
     "python-dotenv>=1.1.1",
     "tqdm>=4.67.1",
     "typer>=0.20.0",
+    "ultimate-notion>=0.9.5",
 ]
 
 [project.scripts]
