feat: Update .gitignore to exclude data and .DS_Store files
docs: Add reporting guidelines in AGENTS.md for user communication in Chinese

refactor: Simplify PaperSummary model in summary.py and enhance prompt structure

feat: Implement upload_summaries_to_notion.py script for uploading summaries to Notion

chore: Add notion-client dependency in pyproject.toml and update lock files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "tqdm>=4.67.1",
     "typer>=0.20.0",
     "ultimate-notion>=0.9.5",
+    "notion-client>=2.5.0",
 ]
 
 [project.scripts]
