--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "datauri>=1.0.0",
     "jupyter>=1.1.1",
-    "lancedb>=0.25.2",
+    "huggingface-hub>=0.24.6",
     "litellm>=1.79.0",
     "loguru>=0.7.3",
     "marker-pdf>=1.10.1",
@@ -34,4 +34,3 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 include = ["papersys"]
-
