--- a/config.toml
+++ b/config.toml
@@ -50,3 +50,6 @@ last_n_days = 7
 sample_rate = 0.15
 high_threshold = 0.95
 boundary_threshold = 0.5
+
+[notion]
+database = "https://www.notion.so/29981ffdcde3804d8378c726c9eef5f1"
