--- a/config.toml
+++ b/config.toml
@@ -51,5 +51,10 @@ sample_rate = 0.15
 high_threshold = 0.95
 boundary_threshold = 0.5
 
+[summary]
+model = "gemini-2.5-pro"
+use_batch = true
+poll_interval = 30
+
 [notion]
 database = "https://www.notion.so/29981ffdcde3804d8378c726c9eef5f1"
