fix: 更新工作流输入描述，明确推荐和摘要的最大论文数量

--- a/.github/workflows/daily_paper_workflow.yml
+++ b/.github/workflows/daily_paper_workflow.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       limit:
-        description: "Limit number of papers to process (for testing, leave empty for no limit)"
+        description: "limit (max number of papers for recommendation and summary)"
         type: string
         required: false
         default: ""
