--- a/.github/workflows/daily_paper_workflow.yml
+++ b/.github/workflows/daily_paper_workflow.yml
@@ -33,6 +33,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Configure Git
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          echo "✅ Git user configured for commits"
+
       - name: Validate required secrets
         run: |
           missing_secrets=()
