--- a/config.toml
+++ b/config.toml
@@ -47,9 +47,10 @@ k_smote = 16
 # 预测配置
 [recommend.predict]
 last_n_days = 60
-sample_rate = 0.04
+sample_rate = 0.01
 high_threshold = 0.95
 boundary_threshold = 0.5
+limit = 20
 
 [summary]
 model = "gemini-2.5-pro"
