feat: Implement OCR batch processing with PDF download and caching
- Added a comprehensive refactor document for OCR batch processing, detailing the new three-stage workflow: download, upload, and batch processing.
- Introduced frequency control for arXiv access to mitigate 403 errors.
- Implemented PDF caching management to reuse downloaded PDFs and support custom cache directories.
- Enhanced Mistral Cloud file management with complete lifecycle handling for uploaded PDFs.
- Developed a test script for batch OCR processing, including logging and markdown conversion of results.
- Provided configuration and monitoring recommendations for both development and production environments.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "typer>=0.20.0",
     "ultimate-notion>=0.9.5",
     "notion-client>=2.5.0",
+    "requests>=2.32.5",
 ]
 
 [project.scripts]
