--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
     "ultimate-notion>=0.9.5",
     "notion-client>=2.5.0",
     "requests>=2.32.5",
+    "hdbscan>=0.8.40",
+    "umap-learn>=0.5.9.post2",
+    "matplotlib>=3.10.7",
 ]
 
 [project.scripts]
